--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -36,7 +36,7 @@ on:
         description: 'Specify your Build Target' # Pick among boot, recovery and vendor_boot
         required: true
         default: ''
-        type: pbrp ,bootimage
+        type: bootimage
         options:
         - pbrp
         - bootimage
