--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -54,7 +54,7 @@ on:
 
 jobs:
   build:
-    name: Build PBRP by ${{ Berat }}
+    name: Build PBRP by ${{ github.actor }}
     runs-on: ubuntu-20.04
     if: github.event.repository.owner.id == github.event.sender.id
     env:
