--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -6,8 +6,8 @@ on:
       MANIFEST_BRANCH:
         description: 'PBRP Manifest Branch'
         required: true
-        default: 'android-12.1'
-        type: android-12.1
+        default: 'android-11.0'
+        type: android-11.0
         options:
         - android-12.1
         - android-11.0
@@ -19,24 +19,24 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree' # Your already made Device Tree for TWRP
         required: true
-        default: 'https://github.com/BerseusBerat/PBRP-TREE-rosemary'
+        default: 'https://github.com/PitchBlackRecoveryProject/android_device_samsung_a70q-pbrp'
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch' # Your Device Tree Branch, make sure it's right.
         required: true
-        default: 'pb_android-12.1'
+        default: 'android-9.0'
       DEVICE_PATH:
         description: 'Specify your Device Path' # As is, just like your DEVICE_PATH in your BoardConfig.mk
         required: true
-        default: 'device/redmi/rosemary'
+        default: 'device/samsung/a70q'
       DEVICE_NAME:
         description: 'Specify your Device Codename' # As is, just like your PRODUCT_DEVICE in your device tree.
         required: true
-        default: 'rosemary' 
+        default: 'a70q' 
       BUILD_TARGET:
         description: 'Specify your Build Target' # Pick among boot, recovery and vendor_boot
         required: true
-        default: 'pbrp'
-        type: pbrp
+        default: 'recoveryimage'
+        type: recoveryimage
         options:
         - pbrp
         - bootimage
@@ -152,7 +152,7 @@ jobs:
         cd android-recovery
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
-        lunch ${{ env.DEVICE_MAKEFILE }}-eng && mka ${{ github.event.inputs.BUILD_TARGET }}
+        lunch ${{ env.DEVICE_MAKEFILE }} && mka ${{ github.event.inputs.BUILD_TARGET }}
 
     - name: Check Build Makefile
       run: |
