--- a/.github/workflows/SkyHawk-SHRP.yml
+++ b/.github/workflows/SkyHawk-SHRP.yml
@@ -6,16 +6,11 @@ on:
       MANIFEST:
         description: 'SHRP Manifest'
         required: true
-        default: 'https://github.com/lazymeao/manifest_sh.git'
+        default: 'https://github.com/SHRP-Reborn/manifest'
       MANIFEST_BRANCH:
         description: 'SHRP Manifest Branch'
         required: true
-        default: ''
-        type: choice
-        options:
-        - v3_11.0
-        - v3_10.0
-        - v3_9.0
+        default: 'shrp-12.1'
       DEVICE_TREE:
         description: 'Custom Recovery Tree' # Your already made Device Tree for TWRP
         required: true
